--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+#Prepros App
+.idea
+node_modules/
+ruby/
+ffmpegsumo.dll
+icudt.dll
+libEGL.dll
+libGLESv2.dll
+nw.pak
+Prepros.exe
+
 #################
 ## Eclipse
 #################
