--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 
     "ruby": {
 
-        "path": "ruby/bin/ruby.exe",
+        "path": "ruby/bin/ruby",
         "version": "2.0.0",
 
         "gems": {
@@ -57,8 +57,8 @@
                 "version": "3.1.6"
             },
             "haml": {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/haml-4.0.2/bin/haml",
-                "version": "4.0.2"
+                "path": "ruby/lib/ruby/gems/2.0.0/gems/haml-4.0.3/bin/haml",
+                "version": "4.0.3"
             },
             "kramdown" : {
                 "path": "ruby/lib/ruby/gems/2.0.0/gems/kramdown-1.0.2/bin/kramdown",
