Short ruby executable paths

--- a/package.json
+++ b/package.json
@@ -45,27 +45,29 @@
 
         "gems": {
             "sass": {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/sass-3.2.9/bin/sass",
+                "path": "ruby/bin/sass",
                 "version": "3.2.9"
             },
             "compass": {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/bin/compass",
+                "path": "ruby/bin/compass",
                 "version": "0.12.2"
             },
-            "bourbon": {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/bourbon-3.1.6/app/assets/stylesheets",
-                "version": "3.1.6"
-            },
             "haml": {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/haml-4.0.3/bin/haml",
+                "path": "ruby/bin/haml",
                 "version": "4.0.3"
             },
             "kramdown" : {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/kramdown-1.0.2/bin/kramdown",
+                "path": "ruby/bin/kramdown",
                 "version": "1.0.2"
             },
+
+
+            "bourbon": {
+                "path": "ruby/sass-lib/bourbon",
+                "version": "3.1.6"
+            },
             "susy" : {
-                "path": "ruby/lib/ruby/gems/2.0.0/gems/susy-1.0.8/sass",
+                "path": "ruby/sass-lib/susy",
                 "version": "1.0.8"
             }
         }
