--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
                 "path": "ruby/bin/haml",
                 "version": "4.0.3"
             },
+            "slim": {
+                "path": "ruby/bin/slimrb",
+                "version": "1.3.9"
+            },
             "kramdown" : {
                 "path": "ruby/bin/kramdown",
                 "version": "1.0.2"
