--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 
     "__JSON_NOTE": "All paths are relative to this json file",
 
-    "version" : "1.7.0",
+    "version" : "1.5.0",
+    "releaseDate": "June 11, 2013",
 
     "dependencies": {
         "coffee-script": "1.6.3",
