--- a/package.json
+++ b/package.json
@@ -40,36 +40,18 @@
 
     "ruby": {
 
-        "path": "ruby/bin/ruby",
+        "path": "ruby_win/bin/ruby",
         "version": "2.0.0",
+        "bin": "ruby/bin",
+
+        "bourbon": "ruby/bourbon",
 
         "gems": {
-            "sass": {
-                "path": "ruby/bin/sass",
-                "version": "3.2.9"
-            },
-            "compass": {
-                "path": "ruby/bin/compass",
-                "version": "0.12.2"
-            },
-            "haml": {
-                "path": "ruby/bin/haml",
-                "version": "4.0.3"
-            },
-            "slim": {
-                "path": "ruby/bin/slimrb",
-                "version": "2.0.0"
-            },
-            "kramdown" : {
-                "path": "ruby/bin/kramdown",
-                "version": "1.0.2"
-            },
-
-
-            "bourbon": {
-                "path": "ruby/bourbon",
-                "version": "3.1.6"
-            }
+            "sass": "3.2.9",
+            "compass": "0.12.2",
+            "haml": "4.0.3",
+            "slim": "2.0.0",
+            "bourbon": "3.1.6"
         }
     },
 
