--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 
         "path": "ruby_exec/bin/ruby",
         "version": "2.0.0",
-        "bin": "ruby/bin",
+        "bin": "ruby_gems/bin",
 
         "bourbon": "ruby/bourbon",
 
