--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
 #Prepros App
+
 .idea
-node_modules/
-ruby_gems/bourbon/*
-ruby_gems/gems/*
-ruby_gems/specifications/*
-ruby_exec
+
+application/node_modules/*
+!application/node_modules/.gitkeep
+
+application/ruby_gems/bourbon/*
+!application/ruby_gems/bourbon/.gitkeep
+
+application/ruby_gems/gems/*
+!application/ruby_gems/gems/.gitkeep
+
+application/ruby_gems/specifications/*
+!application/ruby_gems/specifications/.gitkeep
+
+application/ruby_exec/*
+!application/ruby_exec/.gitkeep
+
+
 ffmpegsumo.dll
 icudt.dll
 libEGL.dll
