--- a/application/package.json
+++ b/application/package.json
@@ -40,14 +40,16 @@
         "version": "2.0.0",
         "bin": "ruby_gems/bin",
 
-        "bourbon": "ruby_gems/bourbon",
+        "bourbon": "ruby_gems/bourbon/bourbon",
+        "neat": "ruby_gems/bourbon/neat",
 
         "gems": {
             "sass": "3.2.9",
             "compass": "0.12.2",
             "haml": "4.0.3",
             "slim": "2.0.0",
-            "bourbon": "3.1.6"
+            "bourbon": "3.1.8",
+            "neat": "1.3.0"
         }
     }
 }
