Added Support for LiveScript, Fixed Notification Window scrollbar on OSX & Removed Taskbar Title for OSX (Standard)

--- a/application/package.json
+++ b/application/package.json
@@ -26,6 +26,7 @@
         "fs-extra": "0.6.1",
         "jade": "0.31.2",
         "less": "1.4.1",
+        "LiveScript": "1.1.1",
         "marked": "0.2.9",
         "MD5": "1.0.3",
         "nib": "0.9.1",
