--- a/application/package.json
+++ b/application/package.json
@@ -25,11 +25,13 @@
         "express": "3.2.6",
         "fs-extra": "0.6.1",
         "jade": "0.31.2",
+        "jpegtran-bin": "0.1.7",
         "less": "1.4.1",
         "LiveScript": "1.1.1",
         "marked": "0.2.9",
         "MD5": "1.0.3",
         "nib": "0.9.1",
+        "optipng-bin": "0.2.6",
         "stylus": "0.32.1",
         "uglify-js": "2.3.6",
         "websocket": "1.0.8"
