--- a/docs/config.json
+++ b/docs/config.json
@@ -1,6 +1,6 @@
 {
 	"__COMMENT__": "Change _baseUrl to baseUrl before building",
-	"_baseUrl": "http://alphapixels.com/prepros",
+	"_baseUrl": "http://alphapixels.com/prepros/docs",
 	"locals": {
 		"title": "Documentation"
 	}
