--- a/application/package.json
+++ b/application/package.json
@@ -25,13 +25,13 @@
         "coffee-script": "1.6.3",
         "express": "3.3.4",
         "fs-extra": "0.6.3",
-        "jade": "0.33.0",
+        "jade": "0.34.1",
         "less": "1.4.2",
-        "LiveScript": "1.1.1",
+        "LiveScript": "1.2.0",
         "marked": "0.2.9",
-        "MD5": "1.0.3",
+        "MD5": "1.1.0",
         "nib": "0.9.1",
-        "stylus": "0.34.1",
+        "stylus": "0.36.1",
         "uglify-js": "2.3.6",
         "websocket": "1.0.8",
         "ycssmin": "1.0.1"
@@ -43,18 +43,18 @@
 
     "ruby": {
 
-        "path": "ruby_exec/bin/ruby",
+        "path": "ruby/bin/ruby",
         "version": "2.0.0",
-        "gemPath": "ruby_gems",
+        "gemPath": "gems",
 
-        "bourbon": "bourbon/bourbon",
-        "neat": "bourbon/neat",
+        "bourbon": "gems/gems/bourbon-3.1.8/app/assets/stylesheets/",
+        "neat": "gems/gems/neat-1.3.0/app/assets/stylesheets/",
 
         "gems": {
-            "sass": "3.2.9",
+            "sass": "3.2.10",
             "compass": "0.12.2",
             "haml": "4.0.3",
-            "slim": "2.0.0",
+            "slim": "2.0.1",
             "bourbon": "3.1.8",
             "neat": "1.3.0"
         }
