--- a/application/package.json
+++ b/application/package.json
@@ -45,7 +45,7 @@
 
         "path": "ruby/bin/ruby",
         "version": "2.0.0",
-        "gemPath": "gems",
+        "gemPath": "gems/",
 
         "bourbon": "gems/gems/bourbon-3.1.8/app/assets/stylesheets/",
         "neat": "gems/gems/neat-1.3.0/app/assets/stylesheets/",
