vanilla refresh and option to enable faster file watcher

--- a/application/package.json
+++ b/application/package.json
@@ -22,6 +22,7 @@
 
     "dependencies": {
         "autoprefixer": "0.7.20130808",
+        "chokidar": "0.6.2",
         "coffee-script": "1.6.3",
         "express": "3.3.4",
         "fs-extra": "0.6.3",
