--- a/application/package.json
+++ b/application/package.json
@@ -1,64 +1,65 @@
 {
-    "name": "Prepros",
-    "main": "app/app.html",
-    "single-instance": false,
-    "dom_storage_quota": 40,
-    "window": {
-        "title": "Prepros",
-        "icon": "app/assets/img/icons/128.png",
-        "toolbar": false,
-        "frame": false,
-        "position": "center",
-        "resizable": true,
-        "width": 1100,
-        "min_width": 675,
-        "height": 680,
-        "min_height": 650,
-        "show": false
-    },
-
-    "__JSON_NOTE": "All paths are relative to this json file",
-
-    "dependencies": {
-        "autoprefixer": "0.8.20131104",
-        "chokidar": "0.7.1",
-        "clean-css": "2.0.2",
-        "coffee-script": "1.6.3",
-        "express": "3.4.4",
-        "fs-extra": "0.8.1",
-        "iced-coffee-script": "1.6.3-g",
-        "jade": "0.35.0",
-        "less": "1.5.1",
-        "LiveScript": "1.2.0",
-        "marked": "0.2.10",
-        "MD5": "1.1.0",
-        "minimatch": "0.2.12",
-        "nib": "1.0.1",
-        "portfinder": "0.2.1",
-        "stylus": "0.40.3",
-        "uglify-js": "2.4.3",
-        "websocket": "1.0.8"
-    },
-
-    "ruby": {
-
-        "path": "bin/ruby/bin/ruby",
-        "version": "2.0.0",
-        "gemPath": "gems/",
-
-        "bourbon": "gems/gems/bourbon-3.1.8/app/assets/stylesheets/",
-        "neat": "gems/gems/neat-1.5.0/app/assets/stylesheets/",
-        "bitters": "gems/gems/bitters-0.9.1/app/assets/stylesheets",
-
-        "gems": {
-            "sass": "3.3.0.rc.2",
-            "compass": "1.0.0.alpha.13",
-            "haml": "4.0.4",
-            "slim": "2.0.2",
-            "bourbon": "3.1.8",
-            "neat": "1.5.0",
-            "susy": "1.0.9",
-            "bitters": "0.9.1"
-        }
+  "name": "Prepros App",
+  "main": "app/app.html",
+  "single-instance": false,
+  "dom_storage_quota": 40,
+  "window": {
+    "title": "Prepros",
+    "icon": "app/assets/img/icons/128.png",
+    "toolbar": false,
+    "frame": false,
+    "position": "center",
+    "resizable": true,
+    "width": 1100,
+    "min_width": 675,
+    "height": 680,
+    "min_height": 650,
+    "show": false
+  },
+  "__JSON_NOTE": "All paths are relative to this json file",
+  "dependencies": {
+    "LiveScript": "1.2.0",
+    "MD5": "1.1.0",
+    "autoprefixer": "1.2.0",
+    "chokidar": "0.8.2",
+    "clean-css": "2.2.0",
+    "coffee-script": "1.7.1",
+    "express": "3.4.4",
+    "fs-extra": "0.8.1",
+    "ftp": "0.3.7",
+    "iced-coffee-script": "1.7.1-f",
+    "jade": "1.3.1",
+    "less": "1.7.1",
+    "marked": "0.3.2",
+    "minimatch": "0.2.12",
+    "nib": "1.0.2",
+    "portfinder": "0.2.1",
+    "request": "2.27.0",
+    "ssh2": "0.2.25",
+    "stylus": "0.46.3",
+    "uglify-js": "2.4.3",
+    "websocket": "1.0.8",
+    "weinre": "2.0.0-pre-HH0SN197"
+  },
+  "scripts": {
+    "postinstall": "patch node_modules/weinre/lib/utils.coffee < weinre.patch"
+  },
+  "ruby": {
+    "path": "bin/ruby/bin/ruby",
+    "version": "2.0.0",
+    "gemPath": "gems/",
+    "bourbon": "gems/gems/bourbon-4.0.2/app/assets/stylesheets/",
+    "neat": "gems/gems/neat-1.6.0/app/assets/stylesheets/",
+    "bitters": "gems/gems/bitters-0.10.0/app/assets/stylesheets",
+    "gems": {
+      "sass": "3.3.8",
+      "compass": "0.12.6",
+      "haml": "4.0.5",
+      "slim": "2.0.2",
+      "bourbon": "4.0.2",
+      "neat": "1.6.0",
+      "susy": "2.1.2",
+      "bitters": "0.10.0"
     }
+  }
 }
